// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛🐣🗑️✨
|
| https://github.com/knative/client/pull/[#]
////

### Unreleased
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Embed the namespace in request body while creating channels
| https://github.com/knative/client/pull/1117[#1117]
|===

| 🎁
| Add "url" output format to return broker url in broker describe and channel url in channel describe
| https://github.com/knative/client/pull/1118[#1118]
|===

| 🎁
| Add machine readable output (-o flag) to kn broker describe
| https://github.com/knative/client/pull/1124[#1124]
|===

### v0.19.0 (2020-11-11)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🗑
| Drop deprecated `--requests-cpu,--requests-memory,--limits-cpu,--limits-memory` flags support
| https://github.com/knative/client/pull/1110[#1110]

| 🎁
| Add _arm64_ binary to the release
| https://github.com/knative/client/pull/1106[#1106]

| 🗑
| Drop deprecated `--async` flag support
| https://github.com/knative/client/pull/1094[#1094]

| 🎁
| Add `channel:` sink prefix
| https://github.com/knative/client/pull/1092[#1092]

| 🐣
| Uniform multiple descriptions for sinks
| https://github.com/knative/client/pull/1075[#1075]

| 🎁
| Add `kn service import` command (experimental)
| https://github.com/knative/client/pull/1065[#1065]

| 🎁
| Add aliases to help commands
| https://github.com/knative/client/pull/1055[#1055]

| 🎁
| Add `WithLabel()` list filter to serving client library
| https://github.com/knative/client/pull/1054[#1054]

| 🐣
| Refactor to move all `PodSpec` related handling to a single place
| https://github.com/knative/client/pull/1024[#1024]

| 🎁
| Add `kn service apply`
| https://github.com/knative/client/pull/964[#964]
|===

## v0.18.1 (2020-10-13)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add WithLabel list filter to serving client lib